src/test-c/test_fail/error/void_return.c
void toto(){
    return 1;
}

int main(){
    return toto();
}